--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/backcolor"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                     android:background="@drawable/ic_baseline_keyboard_arrow_left_24" />
 
                 <TextView
-                    android:id="@+id/logout2"
+                    android:id="@+id/logout3"
                     android:layout_width="100dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="20dp"
@@ -53,7 +53,7 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginLeft="335dp"
-                    android:id="@+id/alarm2"
+                    android:id="@+id/alarm3"
                     android:background="@drawable/notification"/>
 
             </FrameLayout>
@@ -78,13 +78,28 @@
                     android:layout_marginBottom="30dp"
                     android:background="@drawable/rectangle2" />
 
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="120dp"
+                    android:background="@drawable/rectangle5"/>
+
                 <TextView
                     android:layout_width="80dp"
                     android:layout_height="30dp"
-                    android:text="배달"
+                    android:text="생필품"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="138dp"/>
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:text="음식"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_marginTop="5dp"
                     android:layout_marginLeft="55dp"/>
 
                 <ImageView
@@ -115,7 +130,7 @@
                     android:background="@drawable/plusbutton"
                     android:layout_marginTop="430dp"
                     android:layout_marginLeft="330dp"
-                    android:id="@+id/plusbutton"
+                    android:id="@+id/plusbutton2"
                     app:tint="@color/backcolor"/>
 
                 <LinearLayout
